CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT(YSU_IMAGER)

set (CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(ZLIB REQUIRED)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${ZLIB_LIBRARIES})

FIND_PACKAGE(OpenCV REQUIRED )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} )

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_C_FLAGS "-U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0 -O2")

INCLUDE_DIRECTORIES(/usr/include/libirimager)
LINK_DIRECTORIES(/usr/lib)

LINK_LIBRARIES(irdirectsdk udev GL GLU glut pthread usb-1.0)

ADD_EXECUTABLE(ysu_record Obvious2D.cpp ysu_record.cpp)
TARGET_LINK_LIBRARIES(ysu_record  ${OpenCV_LIBRARIES})
